@@ -5,6 +5,9 @@ Beta   1.0.4 - 2009-03-xx
 - Bumping up CMake minimum version requirement from 2.4.2 to 2.6.2.
   We need the latest version for Windows. (Lawrin)
 
+- Added "metadataUseInfoSchema" to connection propery map which allows you
+  to control the use of the INFORMATION_SCHEMA for meta data. (Andrey)
+
 Alpha  1.0.3 - 2009-03-03
 
 - Added new tests at test/unit/classes. Those tests are mostly about
